--- a/style.css
+++ b/style.css
@@ -25,3 +25,13 @@ body
     font-family: 'Courier New', Courier, monospace;
     font-size: 20px;
 }
+
+.copy_right_footer{
+    position: fixed;
+    color: blue;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    font-size: 20px;
+    padding: 10px;
+}
